Place photo credit information on photo

--- a/sign-up.html
+++ b/sign-up.html
@@ -25,7 +25,7 @@
           <p class="logo-text">ODIN</p>
         </div>
       </div>
-      <p>
+      <p class="photo-credit">
         Photo by
         <a
           href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
