Add style to call to action

--- a/sign-up.html
+++ b/sign-up.html
@@ -45,7 +45,7 @@
           this in your life to help you realize your deepest dreams.<br />Sign
           up <em>now</em> to get started.
         </p>
-        <p>You <em>know</em> you want to.</p>
+        <p class="convincing-statement">You <em>know</em> you want to.</p>
       </div>
       <div class="sign-up-container">
         <p>Let's do this!</p>
